module/postponed/type_constructor/tests/inc/many/many_without_args_test.rs
use type_constructor::prelude::*;

fn main()
{
  types!( many Bad : <  > );
}
